templates/lumenvox_template.yaml
---
# Source: lumenvox/charts/lumenvox-common/templates/services/admin-portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-portal-service
  namespace: lumenvox
spec:
  selector:
    app: admin-portal
  ports:
    - name: portal
      port: 82
      targetPort: portal
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/services/archive.yaml
apiVersion: v1
kind: Service
metadata:
  name: archive-service
  namespace: lumenvox
spec:
  selector:
    app: archive
  ports:
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/services/audit.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-service
  namespace: lumenvox
spec:
  selector:
    app: audit
  ports:
    - name: grpc
      port: 80
      targetPort: grpc
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/services/binary-storage.yaml
apiVersion: v1
kind: Service
metadata:
  name: binary-storage-service
  namespace: lumenvox
spec:
  selector:
    app: binary-storage
  ports:
    - name: grpc
      port: 80
      targetPort: grpc
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/services/configuration.yaml
apiVersion: v1
kind: Service
metadata:
  name: configuration-service
  namespace: lumenvox
spec:
  selector:
    app: configuration
  ports:
    - name: grpc
      port: 80
      targetPort: grpc
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/services/deployment-portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-portal-service
  namespace: lumenvox
spec:
  selector:
    app: deployment-portal
  ports:
    - name: portal
      port: 82
      targetPort: portal
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/services/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-service
  namespace: lumenvox
spec:
  selector:
    app: deployment
  ports:
    - name: grpc
      port: 80
      targetPort: grpc
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/services/license.yaml
apiVersion: v1
kind: Service
metadata:
  name: license-service
  namespace: lumenvox
spec:
  selector:
    app: license
  ports:
    - name: grpc
      port: 80
      targetPort: grpc
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/services/management-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: management-api-service
  namespace: lumenvox
spec:
  selector:
    app: management-api
  ports:
    - name: rest
      port: 81
      targetPort: rest
---
# Source: lumenvox/charts/lumenvox-common/templates/services/reporting.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
  namespace: lumenvox
spec:
  selector:
    app: reporting
  ports:
    - name: grpc
      port: 80
      targetPort: grpc
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/services/resource.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-service
  namespace: lumenvox
spec:
  selector:
    app: resource
  ports:
    - name: grpc
      port: 80
      targetPort: grpc
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/services/transaction.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: lumenvox
spec:
  selector:
    app: transaction
  ports:
    - name: grpc
      port: 80
      targetPort: grpc
    - name: http
      port: 90
      targetPort: http
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/admin-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-portal
  namespace: lumenvox
  labels:
    app: admin-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-portal
  template:
    metadata:
      labels:
        app: admin-portal
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '5110'
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: admin-portal
          image: lumenvox/admin-portal:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: portal
              containerPort: 3001
            - name: http
              containerPort: 5110
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 30Mi
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/archive.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archive
  namespace: lumenvox
  labels:
    app: archive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archive
  template:
    metadata:
      labels:
        app: archive
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '5110'
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: archive
          image: lumenvox/archive:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5110
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 30Mi
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/audit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit
  namespace: lumenvox
  labels:
    app: audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit
  template:
    metadata:
      labels:
        app: audit
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '90'
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: audit
          image: lumenvox/audit:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 80
            - name: http
              containerPort: 90
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 250m
              memory: 400Mi
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/binary-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: binary-storage
  namespace: lumenvox
  labels:
    app: binary-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: binary-storage
  template:
    metadata:
      labels:
        app: binary-storage
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '90'
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: binary-storage
          image: lumenvox/storage:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 80
            - name: http
              containerPort: 90
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 350m
              memory: 300Mi
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/configuration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configuration
  namespace: lumenvox
  labels:
    app: configuration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configuration
  template:
    metadata:
      labels:
        app: configuration
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '90'
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: configuration
          image: lumenvox/configuration:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 80
            - name: http
              containerPort: 90
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 200Mi
          volumeMounts:
            - mountPath: /etc/lumenvox/Lang/vb-active
              name: vb-active
      volumes:
        - name: vb-active
          persistentVolumeClaim:
            claimName: vb-active-claim
            readOnly: false
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/deployment-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-portal
  namespace: lumenvox
  labels:
    app: deployment-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-portal
  template:
    metadata:
      labels:
        app: deployment-portal
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '5110'
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: deployment-portal
          image: lumenvox/deployment-portal:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: portal
              containerPort: 3101
            - name: http
              containerPort: 5110
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 30Mi
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: lumenvox
  labels:
    app: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment
  template:
    metadata:
      labels:
        app: deployment
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '90'
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: deployment
          image: lumenvox/deployment:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 80
            - name: http
              containerPort: 90
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 150Mi
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/license.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: license
  namespace: lumenvox
  labels:
    app: license
spec:
  replicas: 1
  selector:
    matchLabels:
      app: license
  template:
    metadata:
      labels:
        app: license
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '5110'
        linkerd.io/inject: enabled
    spec:
      serviceAccountName: license
      containers:
        - name: license
          image: lumenvox/license:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 5010
            - name: http
              containerPort: 5110
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 30Mi
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/management-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-api
  namespace: lumenvox
  labels:
    app: management-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: management-api
  template:
    metadata:
      labels:
        app: management-api
        # No Prometheus scraping for now
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: management-api
          image: lumenvox/management-api:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: rest
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: rest
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: rest
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 150Mi
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/reporting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
  namespace: lumenvox
  labels:
    app: reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting
  template:
    metadata:
      labels:
        app: reporting
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '90'
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: reporting
          image: lumenvox/reporting:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 80
            - name: http
              containerPort: 90
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 12
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 12
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource
  namespace: lumenvox
  labels:
    app: resource
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource
  template:
    metadata:
      labels:
        app: resource
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '5110'
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: resource
          image: lumenvox/resource:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 8080
            - name: http
              containerPort: 5110
          startupProbe:
            httpGet:
              path: /health
              port: http

            failureThreshold: 360
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 30Mi
          volumeMounts:
            - mountPath: /etc/lumenvox/Lang
              name: lang
            - mountPath: /usr/lib64/lumenvox_backends
              name: backends
      volumes:
        - name: lang
          persistentVolumeClaim:
            claimName: lang-claim
            readOnly: false
        - name: backends
          persistentVolumeClaim:
            claimName: backends-claim
            readOnly: false
---
# Source: lumenvox/charts/lumenvox-common/templates/deployments/transaction.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction
  namespace: lumenvox
  labels:
    app: transaction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
  template:
    metadata:
      labels:
        app: transaction
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '90'
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: transaction
          image: lumenvox/transaction:4.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 80
            - name: http
              containerPort: 90
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi
---
# Source: lumenvox/charts/lumenvox-common/templates/ingresses/admin-portal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-portal-ingress
  namespace: lumenvox
spec:
  ingressClassName: nginx
  rules:
    - host: admin-portal.testmachine.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-portal-service
                port:
                  name: portal
  tls:
    - secretName: speech-tls-secret
      hosts:
        - admin-portal.testmachine.com
---
# Source: lumenvox/charts/lumenvox-common/templates/ingresses/deployment-portal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployment-portal-ingress
  namespace: lumenvox
spec:
  ingressClassName: nginx
  rules:
    - host: deployment-portal.testmachine.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deployment-portal-service
                port:
                  name: portal
  tls:
    - secretName: speech-tls-secret
      hosts:
        - deployment-portal.testmachine.com
---
# Source: lumenvox/charts/lumenvox-common/templates/ingresses/linkerd-dashboard-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k8s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: linkerd-viz
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: web-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: linkerd.testmachine.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8084
---
# Source: lumenvox/charts/lumenvox-common/templates/ingresses/management-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: management-api-ingress
  namespace: lumenvox
spec:
  ingressClassName: nginx
  rules:
    - host: management-api.testmachine.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: management-api-service
                port:
                  name: rest
  tls:
    - secretName: speech-tls-secret
      hosts:
        - management-api.testmachine.com
